--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 * {
   margin: 0;
-font-family: 'Libre Baskerville', serif;
+  font-family: 'Libre Baskerville', serif;
+  box-sizing: border-box;
 }
